--- a/training/web/membre.xhtml
+++ b/training/web/membre.xhtml
@@ -22,8 +22,8 @@
             <table>
                 <tr>
                     <td> id </td>
-                    <td><h:inputText value="#{membre.idMembre}"/></td>
-                    <td><h:outputText value="#{membre.motPass}"/></td>
+                    <td><h:inputText value="#{membre.idMembre}" readonly="true"/></td>
+                    <td><h:inputText value="#{membre.motPass}" readonly="true"/></td>
                 </tr>
                 <tr>
                     <td> nom </td>
