--- a/training/web/selectMembre.xhtml
+++ b/training/web/selectMembre.xhtml
@@ -9,7 +9,7 @@
     <h:head>
         <title>Facelet Title</title>
     </h:head>
-    <h:body rendered="#{login.session() eq 1}">
+    <h:body>
          
         <h:form>
             <p:dataTable var="membre" value="#{membre.liste()}">
