--- a/training/web/selectModule.xhtml
+++ b/training/web/selectModule.xhtml
@@ -32,6 +32,9 @@
                      <h:commandButton action="#{formateur.enregistrer()}" value="Selectionner" rendered="#{actionMessage.action eq 'Formateurs'}">
                          <f:setPropertyActionListener target="#{formateur.module}" value="#{modules}"/>
                      </h:commandButton>
+                     <h:commandButton action="#{evaluation.saisie()}" value="Selectionner" rendered="#{actionMessage.action eq 'Evaluation'}">
+                         <f:setPropertyActionListener target="#{evaluation.module}" value="#{modules}"/>
+                     </h:commandButton>
                      <h:commandButton action="#{module.saisie()}" value="Modifier">
                          <f:setPropertyActionListener target="#{miseAjour.module}" value="#{modules}"/>
                          <f:setPropertyActionListener target="#{module.idModule}" value="#{modules.idModule}"/>
