Génération Id Formation, Id Université et revision requête des modules

--- a/training/web/saisieFormation.xhtml
+++ b/training/web/saisieFormation.xhtml
@@ -15,7 +15,7 @@
             <table>
                 <tr>
                     <td><h:outputText value="Id Formation"/></td>
-                    <td><h:inputText value="#{formation.idFormation}"/></td>
+                    <td><h:inputText value="#{formation.idFormation}" readonly="true" /></td>
                 </tr>
                 <tr>
                     <td><h:outputText value="Formateur"/></td>
