--- a/training/web/saisieUniversite.xhtml
+++ b/training/web/saisieUniversite.xhtml
@@ -14,7 +14,7 @@
             <table>
                 <tr>
                     <td><h:outputText value="Id université"/></td>
-                    <td><h:inputText value="#{universite.iduniv}"/></td>
+                    <td><h:inputText value="#{universite.iduniv}" readonly="true"/></td>
                 </tr>
                 <tr>
                     <td><h:outputText value="Directeur Général"/></td>
