--- a/training/web/selectModule.xhtml
+++ b/training/web/selectModule.xhtml
@@ -18,8 +18,8 @@
                 <p:column headerText="Module">
                     <h:outputText value="#{modules.designation}" />
                 </p:column>
-                <p:column headerText="Nombre Pages">
-                    <h:outputText value="#{modules.nbrePage}" />
+                <p:column headerText="Auteur">
+                    <h:outputText value="#{modules.auteurs}" />
                 </p:column>
                  <p:column headerText="Action" >
                      
