--- a/training/web/main.xhtml
+++ b/training/web/main.xhtml
@@ -1,7 +1,10 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <body>
 
@@ -12,7 +15,23 @@
             </ui:define>
 
             <ui:define name="content">
-                content
+                
+                <p:chart type="metergauge" model="#{journalisation.diagrammeSituation()}"/>
+                
+                <h:dataTable value="#{journalisation.affichageLegende()}" var="leg">
+                    <h:column>
+                        <f:facet name="header">Couleur</f:facet>
+                        <center>#{leg.couleur}</center>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">Libelle</f:facet>
+                        <center>#{leg.libelle}</center>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">Montant</f:facet>
+                        <center>#{leg.montant}</center> 
+                    </h:column>
+                </h:dataTable>
             </ui:define>
 
             <ui:define name="bottom">
