--- a/training/web/selectMembre.xhtml
+++ b/training/web/selectMembre.xhtml
@@ -14,7 +14,7 @@
         <h:form>
             <p:dataTable var="membre" value="#{membre.liste()}">
                 <p:column headerText="ID">
-                    <h:outputText value="#{membre.idMembre}"/>
+                    <h:outputText value="#{membre.idPers}"/>
                 </p:column>
                 <p:column headerText="Nom">
                     <h:outputText value="#{membre.nom}"/>
