bouton initier la lettre de change

--- a/training/web/main.xhtml
+++ b/training/web/main.xhtml
@@ -36,6 +36,9 @@
                         <center>#{leg.montant}</center> 
                     </h:column>
                 </h:dataTable>
+                
+                <br/><br/><br/>
+                <center><h:commandButton value="Initier la lettre de créance pour faire le retrait"/></center>
             </ui:define>
 
             <ui:define name="bottom">
