modèle de redirection des pages du processus de saisie de la section

--- a/training/web/main.xhtml
+++ b/training/web/main.xhtml
@@ -38,7 +38,7 @@
                 </h:dataTable>
                 
                 <br/><br/><br/>
-                <center><h:commandButton value="Initier la lettre de créance pour faire le retrait"/></center>
+                <center><h:commandButton value="Initier la lettre de change pour faire le retrait"/></center>
             </ui:define>
 
             <ui:define name="bottom">
