--- a/training/web/selectSection.xhtml
+++ b/training/web/selectSection.xhtml
@@ -17,7 +17,7 @@
                      <h:outputText value="#{sections.vacation}"/>
                 </p:column>
                 <p:column headerText="Action">
-                    <h:commandButton action="#{promotion.saisie()}" value="Selectionner" rendered="#{actionMessage.action eq 'Promotion'}">
+                    <h:commandButton action="saisiePromotion?faces-redirect=true" value="Selectionner" rendered="#{actionMessage.action eq 'Promotion'}">
                         <f:setPropertyActionListener target="#{promotion.sections}" value="#{sections}"/>                        
                     </h:commandButton>                  
                 </p:column>             
