Révision du formulaire section

--- a/training/web/saisieSection.xhtml
+++ b/training/web/saisieSection.xhtml
@@ -47,7 +47,7 @@
                 </tr>
                 <tr>
                     <td><h:commandButton value="Retour" action="#{inscription.retour()}"/></td>
-                    <td><h:commandButton value="Enregistrer" action="#{faculte.enregistrer()}"/></td>
+                    <td><h:commandButton value="Enregistrer" action="#{section.enregistrer()}"/></td>
                 </tr>
             </table>
         </h:form>
